Closed Bug 1780084 Opened 2 years ago Closed 7 months ago

`mozilla::webgpu::Buffer::MapAsync` doesn't check `mValid`

Categories

(Core :: Graphics: WebGPU, defect, P3)

defect

Tracking

()

RESOLVED FIXED
120 Branch
Tracking Status
firefox120 --- fixed

People

(Reporter: jimb, Assigned: nical, NeedInfo)

References

Details

Attachments

(1 file)

mozilla::webgpu::Buffer::MapAsync will call SetMapped even if mValid is false, which seems wrong.

The WebGPU spec currently says that buffer validation should happen on the content timeline, but apparently that's supposed to change. But even if error reporting should happen on the Device timeline in the usual way, we should not be doing anything to the internal state of our Buffer object.

Moving to webgpu-v1 milestone since this is more about spec decisions than a bug I think. The pending buffer patches should handle things properly whether or not mValid is false.

Blocks: webgpu-v1
No longer blocks: webgpu-in-nightly

The severity field is not set for this bug.
:jimb, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jimb)
Severity: -- → S3
Priority: -- → P3
Assignee: nobody → nical.bugzilla
Status: NEW → ASSIGNED
Pushed by nsilva@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c06cdccafe8f
Sanity-check for mValid before mapping the buffer. r=webgpu-reviewers,ErichDonGubler
Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: