Bug 1780084 - Sanity-check for mValid before mapping the buffer. r=webgpu-reviewers,ErichDonGubler

Differential Revision: https://phabricator.services.mozilla.com/D189105